tests/ui/frontmatter/frontmatter-invalid-after-attribute.rs
#![feature(frontmatter)]

---
//~^ ERROR expected item, found `-`
---

fn main() {
}
